--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,4 +40,4 @@ jobs:
           push: true
           tags: reggaemahn/crontab-ui:latest
           build-args:
-            RELEASE=$CRONTAB_UI_RELEASE
+            RELEASE=${{ env.CRONTAB_UI_RELEASE }}
